logs/mobility/build.make.044.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:390:66: error: ‘stevenSearch’ was not declared in this scope
 geometry_msgs::Pose2D tempLocation = stevenSearch(currentLocation);
                                                                  ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
